IDE/Options: Store ShowNonVisualComponents option value in user configuration

--- a/ide/frames/formed_options.lfm
+++ b/ide/frames/formed_options.lfm
@@ -1,15 +1,14 @@
 object FormEditorOptionsFrame: TFormEditorOptionsFrame
   Left = 0
-  Height = 750
+  Height = 600
   Top = 0
-  Width = 961
-  ClientHeight = 750
-  ClientWidth = 961
-  DesignTimePPI = 120
-  OnResize = FrameResize
+  Width = 769
+  ClientHeight = 600
+  ClientWidth = 769
   ParentFont = False
   TabOrder = 0
   Visible = False
+  OnResize = FrameResize
   DesignLeft = 345
   DesignTop = 185
   object GridGroupBox: TGroupBox
@@ -18,37 +17,37 @@ object FormEditorOptionsFrame: TFormEditorOptionsFrame
     AnchorSideTop.Control = Owner
     AnchorSideRight.Control = Owner
     AnchorSideRight.Side = asrBottom
-    Left = 290
-    Height = 193
+    Left = 232
+    Height = 153
     Top = 0
-    Width = 671
+    Width = 537
     Anchors = [akTop, akLeft, akRight]
     AutoSize = True
-    BorderSpacing.Left = 8
+    BorderSpacing.Left = 6
     Caption = 'GridGroupBox'
-    ClientHeight = 168
-    ClientWidth = 667
+    ClientHeight = 133
+    ClientWidth = 533
     TabOrder = 1
     object GridSizeXLabel: TLabel
       AnchorSideLeft.Control = GridGroupBox
       AnchorSideTop.Control = GridSizeXSpinEdit
       AnchorSideTop.Side = asrCenter
-      Left = 8
-      Height = 20
-      Top = 100
-      Width = 100
-      BorderSpacing.Around = 8
+      Left = 6
+      Height = 15
+      Top = 79
+      Width = 77
+      BorderSpacing.Around = 6
       Caption = 'GridSizeXLabel'
     end
     object GridSizeYLabel: TLabel
       AnchorSideLeft.Control = GridGroupBox
       AnchorSideTop.Control = GridSizeYSpinEdit
       AnchorSideTop.Side = asrCenter
-      Left = 8
-      Height = 20
-      Top = 136
-      Width = 99
-      BorderSpacing.Around = 8
+      Left = 6
+      Height = 15
+      Top = 108
+      Width = 77
+      BorderSpacing.Around = 6
       Caption = 'GridSizeYLabel'
     end
     object SnapToGridCheckBox: TCheckBox
@@ -57,13 +56,13 @@ object FormEditorOptionsFrame: TFormEditorOptionsFrame
       AnchorSideTop.Side = asrBottom
       AnchorSideRight.Control = GridGroupBox
       AnchorSideRight.Side = asrBottom
-      Left = 8
-      Height = 24
-      Top = 64
-      Width = 163
-      BorderSpacing.Left = 8
-      BorderSpacing.Top = 4
-      BorderSpacing.Right = 8
+      Left = 6
+      Height = 19
+      Top = 50
+      Width = 132
+      BorderSpacing.Left = 6
+      BorderSpacing.Top = 3
+      BorderSpacing.Right = 6
       Caption = 'SnapToGridCheckBox'
       ParentShowHint = False
       ShowHint = True
@@ -72,12 +71,12 @@ object FormEditorOptionsFrame: TFormEditorOptionsFrame
     object ShowGridCheckBox: TCheckBox
       AnchorSideLeft.Control = GridGroupBox
       AnchorSideTop.Control = GridGroupBox
-      Left = 8
-      Height = 24
-      Top = 8
-      Width = 149
-      BorderSpacing.Left = 8
-      BorderSpacing.Top = 8
+      Left = 6
+      Height = 19
+      Top = 6
+      Width = 121
+      BorderSpacing.Left = 6
+      BorderSpacing.Top = 6
       Caption = 'ShowGridCheckBox'
       ParentShowHint = False
       ShowHint = True
@@ -87,12 +86,12 @@ object FormEditorOptionsFrame: TFormEditorOptionsFrame
       AnchorSideLeft.Control = GridGroupBox
       AnchorSideTop.Control = ShowGridCheckBox
       AnchorSideTop.Side = asrBottom
-      Left = 8
-      Height = 24
-      Top = 36
-      Width = 206
-      BorderSpacing.Left = 8
-      BorderSpacing.Top = 4
+      Left = 6
+      Height = 19
+      Top = 28
+      Width = 165
+      BorderSpacing.Left = 6
+      BorderSpacing.Top = 3
       Caption = 'ShowBorderSpaceCheckBox'
       ParentShowHint = False
       ShowHint = True
@@ -103,11 +102,11 @@ object FormEditorOptionsFrame: TFormEditorOptionsFrame
       AnchorSideLeft.Side = asrBottom
       AnchorSideTop.Control = SnapToGridCheckBox
       AnchorSideTop.Side = asrBottom
-      Left = 116
-      Height = 28
-      Top = 96
-      Width = 80
-      BorderSpacing.Around = 8
+      Left = 89
+      Height = 23
+      Top = 75
+      Width = 64
+      BorderSpacing.Around = 6
       MaxValue = 128
       MinValue = 2
       ParentShowHint = False
@@ -120,11 +119,11 @@ object FormEditorOptionsFrame: TFormEditorOptionsFrame
       AnchorSideLeft.Side = asrBottom
       AnchorSideTop.Control = GridSizeXSpinEdit
       AnchorSideTop.Side = asrBottom
-      Left = 115
-      Height = 28
-      Top = 132
-      Width = 80
-      BorderSpacing.Around = 8
+      Left = 89
+      Height = 23
+      Top = 104
+      Width = 64
+      BorderSpacing.Around = 6
       MaxValue = 128
       MinValue = 2
       ParentShowHint = False
@@ -142,33 +141,32 @@ object FormEditorOptionsFrame: TFormEditorOptionsFrame
     AnchorSideBottom.Control = Owner
     AnchorSideBottom.Side = asrBottom
     Left = 0
-    Height = 317
-    Top = 302
-    Width = 961
+    Height = 271
+    Top = 238
+    Width = 769
     Anchors = [akTop, akLeft, akRight]
     AutoSize = True
-    BorderSpacing.Top = 8
+    BorderSpacing.Top = 6
     Caption = 'FormEditMiscGroupBox'
-    ClientHeight = 292
-    ClientWidth = 957
+    ClientHeight = 251
+    ClientWidth = 765
     TabOrder = 3
     object ShowComponentCaptionsCheckBox: TCheckBox
       AnchorSideLeft.Control = FormEditMiscGroupBox
-      AnchorSideTop.Control = RubberbandSelectsGrandChildsCheckBox
+      AnchorSideTop.Control = ShowNonVisualComponentsCheckBox
       AnchorSideTop.Side = asrBottom
-      AnchorSideRight.Control = FormEditMiscGroupBox
       AnchorSideRight.Side = asrBottom
-      Left = 8
-      Height = 24
-      Top = 36
-      Width = 257
-      BorderSpacing.Left = 8
-      BorderSpacing.Top = 4
-      BorderSpacing.Right = 8
-      Caption = 'ShowComponentCaptionsCheckBox'
+      Left = 25
+      Height = 19
+      Top = 50
+      Width = 264
+      BorderSpacing.Left = 25
+      BorderSpacing.Top = 3
+      BorderSpacing.Right = 6
+      Caption = 'ShowCaptionNonVisualComponentsCheckBox'
       ParentShowHint = False
       ShowHint = True
-      TabOrder = 1
+      TabOrder = 2
     end
     object ShowEditorHintsCheckBox: TCheckBox
       AnchorSideLeft.Control = FormEditMiscGroupBox
@@ -176,17 +174,17 @@ object FormEditorOptionsFrame: TFormEditorOptionsFrame
       AnchorSideTop.Side = asrBottom
       AnchorSideRight.Control = FormEditMiscGroupBox
       AnchorSideRight.Side = asrBottom
-      Left = 8
-      Height = 24
-      Top = 64
-      Width = 195
-      BorderSpacing.Left = 8
-      BorderSpacing.Top = 4
-      BorderSpacing.Right = 8
+      Left = 6
+      Height = 19
+      Top = 72
+      Width = 158
+      BorderSpacing.Left = 6
+      BorderSpacing.Top = 3
+      BorderSpacing.Right = 6
       Caption = 'ShowEditorHintsCheckBox'
       ParentShowHint = False
       ShowHint = True
-      TabOrder = 2
+      TabOrder = 3
     end
     object OpenDesignerOnOpenUnitCheckBox: TCheckBox
       AnchorSideLeft.Control = FormEditMiscGroupBox
@@ -194,17 +192,17 @@ object FormEditorOptionsFrame: TFormEditorOptionsFrame
       AnchorSideTop.Side = asrBottom
       AnchorSideRight.Control = FormEditMiscGroupBox
       AnchorSideRight.Side = asrBottom
-      Left = 8
-      Height = 24
-      Top = 92
-      Width = 262
-      BorderSpacing.Left = 8
-      BorderSpacing.Top = 4
-      BorderSpacing.Right = 8
+      Left = 6
+      Height = 19
+      Top = 94
+      Width = 212
+      BorderSpacing.Left = 6
+      BorderSpacing.Top = 3
+      BorderSpacing.Right = 6
       Caption = 'OpenDesignerOnOpenUnitCheckBox'
       ParentShowHint = False
       ShowHint = True
-      TabOrder = 3
+      TabOrder = 4
     end
     object RightClickSelectsCheckBox: TCheckBox
       AnchorSideLeft.Control = FormEditMiscGroupBox
@@ -212,46 +210,46 @@ object FormEditorOptionsFrame: TFormEditorOptionsFrame
       AnchorSideTop.Side = asrBottom
       AnchorSideRight.Control = FormEditMiscGroupBox
       AnchorSideRight.Side = asrBottom
-      Left = 8
-      Height = 24
-      Top = 120
-      Width = 197
-      BorderSpacing.Left = 8
-      BorderSpacing.Top = 4
+      Left = 6
+      Height = 19
+      Top = 116
+      Width = 160
+      BorderSpacing.Left = 6
+      BorderSpacing.Top = 3
       Caption = 'RightClickSelectsCheckBox'
       ParentShowHint = False
       ShowHint = True
-      TabOrder = 4
+      TabOrder = 5
     end
     object CreateCompFocusNameCheckBox: TCheckBox
       AnchorSideLeft.Control = FormEditMiscGroupBox
       AnchorSideTop.Control = RightClickSelectsCheckBox
       AnchorSideTop.Side = asrBottom
-      Left = 8
-      Height = 24
-      Top = 148
-      Width = 245
-      BorderSpacing.Left = 8
-      BorderSpacing.Top = 4
-      BorderSpacing.Bottom = 4
+      Left = 6
+      Height = 19
+      Top = 138
+      Width = 200
+      BorderSpacing.Left = 6
+      BorderSpacing.Top = 3
+      BorderSpacing.Bottom = 3
       Caption = 'CreateCompFocusNameCheckBox'
-      OnChange = CreateCompFocusNameCheckBoxChange
       ParentShowHint = False
       ShowHint = True
-      TabOrder = 5
+      TabOrder = 6
+      OnChange = CreateCompFocusNameCheckBoxChange
     end
     object RubberbandSelectsGrandChildsCheckBox: TCheckBox
       AnchorSideLeft.Control = FormEditMiscGroupBox
       AnchorSideTop.Control = FormEditMiscGroupBox
       AnchorSideRight.Control = FormEditMiscGroupBox
       AnchorSideRight.Side = asrBottom
-      Left = 8
-      Height = 24
-      Top = 8
-      Width = 949
+      Left = 6
+      Height = 19
+      Top = 6
+      Width = 759
       Anchors = [akTop, akLeft, akRight]
-      BorderSpacing.Left = 8
-      BorderSpacing.Top = 8
+      BorderSpacing.Left = 6
+      BorderSpacing.Top = 6
       Caption = 'RubberbandSelectsGrandChildsCheckBox'
       ParentShowHint = False
       ShowHint = True
@@ -261,33 +259,33 @@ object FormEditorOptionsFrame: TFormEditorOptionsFrame
       AnchorSideLeft.Control = FormEditMiscGroupBox
       AnchorSideTop.Control = SwitchToFavoritesOITabCheckBox
       AnchorSideTop.Side = asrBottom
-      Left = 8
-      Height = 24
-      Top = 204
-      Width = 281
-      BorderSpacing.Left = 8
-      BorderSpacing.Top = 4
-      BorderSpacing.Bottom = 4
+      Left = 6
+      Height = 19
+      Top = 182
+      Width = 230
+      BorderSpacing.Left = 6
+      BorderSpacing.Top = 3
+      BorderSpacing.Bottom = 3
       Caption = 'CheckPackagesOnFormCreateCheckBox'
       ParentShowHint = False
       ShowHint = True
-      TabOrder = 7
+      TabOrder = 8
     end
     object SwitchToFavoritesOITabCheckBox: TCheckBox
       AnchorSideLeft.Control = CreateCompFocusNameCheckBox
       AnchorSideTop.Control = CreateCompFocusNameCheckBox
       AnchorSideTop.Side = asrBottom
-      Left = 32
-      Height = 24
-      Top = 176
-      Width = 244
-      BorderSpacing.Left = 24
-      BorderSpacing.Top = 4
-      BorderSpacing.Bottom = 4
+      Left = 25
+      Height = 19
+      Top = 160
+      Width = 198
+      BorderSpacing.Left = 19
+      BorderSpacing.Top = 3
+      BorderSpacing.Bottom = 3
       Caption = 'SwitchToFavoritesOITabCheckBox'
       ParentShowHint = False
       ShowHint = True
-      TabOrder = 6
+      TabOrder = 7
     end
     object FormTitleBarChangesObjectInspectorCheckBox: TCheckBox
       AnchorSideLeft.Control = FormEditMiscGroupBox
@@ -295,34 +293,52 @@ object FormEditorOptionsFrame: TFormEditorOptionsFrame
       AnchorSideTop.Side = asrBottom
       AnchorSideBottom.Control = FormEditMiscGroupBox
       AnchorSideBottom.Side = asrBottom
-      Left = 8
-      Height = 24
-      Top = 232
-      Width = 331
-      BorderSpacing.Left = 8
-      BorderSpacing.Top = 4
-      BorderSpacing.Bottom = 4
+      Left = 6
+      Height = 19
+      Top = 204
+      Width = 268
+      BorderSpacing.Left = 6
+      BorderSpacing.Top = 3
+      BorderSpacing.Bottom = 3
       Caption = 'FormTitleBarChangesObjectInspectorCheckBox'
       ParentShowHint = False
       ShowHint = True
-      TabOrder = 8
+      TabOrder = 9
     end
     object ForceDPIScalingInDesignTimeCheckBox: TCheckBox
       AnchorSideLeft.Control = FormEditMiscGroupBox
       AnchorSideTop.Control = FormTitleBarChangesObjectInspectorCheckBox
       AnchorSideTop.Side = asrBottom
       AnchorSideBottom.Side = asrBottom
-      Left = 8
-      Height = 24
-      Top = 260
-      Width = 283
-      BorderSpacing.Left = 8
-      BorderSpacing.Top = 4
-      BorderSpacing.Bottom = 8
+      Left = 6
+      Height = 19
+      Top = 226
+      Width = 228
+      BorderSpacing.Left = 6
+      BorderSpacing.Top = 3
+      BorderSpacing.Bottom = 6
       Caption = 'ForceDPIScalingInDesignTimeCheckBox'
       ParentShowHint = False
       ShowHint = True
-      TabOrder = 9
+      TabOrder = 10
+    end
+    object ShowNonVisualComponentsCheckBox: TCheckBox
+      AnchorSideLeft.Control = FormEditMiscGroupBox
+      AnchorSideTop.Control = RubberbandSelectsGrandChildsCheckBox
+      AnchorSideTop.Side = asrBottom
+      AnchorSideRight.Side = asrBottom
+      Left = 6
+      Height = 19
+      Top = 28
+      Width = 222
+      BorderSpacing.Left = 6
+      BorderSpacing.Top = 3
+      BorderSpacing.Right = 6
+      Caption = 'ShowNonVisualComponentsCheckBox'
+      ParentShowHint = False
+      ShowHint = True
+      TabOrder = 1
+      OnChange = ShowNonVisualComponentsCheckBoxChange
     end
   end
   object GuideLinesGroupBox: TGroupBox
@@ -333,30 +349,30 @@ object FormEditorOptionsFrame: TFormEditorOptionsFrame
     AnchorSideRight.Control = Owner
     AnchorSideRight.Side = asrBottom
     AnchorSideBottom.Side = asrBottom
-    Left = 290
-    Height = 93
-    Top = 201
-    Width = 671
+    Left = 232
+    Height = 73
+    Top = 159
+    Width = 537
     Anchors = [akTop, akLeft, akRight]
     AutoSize = True
-    BorderSpacing.Left = 8
-    BorderSpacing.Top = 8
+    BorderSpacing.Left = 6
+    BorderSpacing.Top = 6
     Caption = 'GuideLinesGroupBox'
-    ClientHeight = 68
-    ClientWidth = 667
+    ClientHeight = 53
+    ClientWidth = 533
     TabOrder = 2
     object ShowGuideLinesCheckBox: TCheckBox
       AnchorSideLeft.Control = GuideLinesGroupBox
       AnchorSideRight.Control = GuideLinesGroupBox
       AnchorSideRight.Side = asrBottom
-      Left = 8
-      Height = 24
-      Top = 8
-      Width = 651
+      Left = 6
+      Height = 19
+      Top = 6
+      Width = 521
       Anchors = [akTop, akLeft, akRight]
-      BorderSpacing.Left = 8
-      BorderSpacing.Top = 8
-      BorderSpacing.Right = 8
+      BorderSpacing.Left = 6
+      BorderSpacing.Top = 6
+      BorderSpacing.Right = 6
       Caption = 'ShowGuideLinesCheckBox'
       ParentShowHint = False
       ShowHint = True
@@ -368,15 +384,15 @@ object FormEditorOptionsFrame: TFormEditorOptionsFrame
       AnchorSideTop.Side = asrBottom
       AnchorSideRight.Control = GuideLinesGroupBox
       AnchorSideRight.Side = asrBottom
-      Left = 8
-      Height = 24
-      Top = 36
-      Width = 651
+      Left = 6
+      Height = 19
+      Top = 28
+      Width = 521
       Anchors = [akTop, akLeft, akRight]
-      BorderSpacing.Left = 8
-      BorderSpacing.Top = 4
-      BorderSpacing.Right = 8
-      BorderSpacing.Bottom = 8
+      BorderSpacing.Left = 6
+      BorderSpacing.Top = 3
+      BorderSpacing.Right = 6
+      BorderSpacing.Bottom = 6
       Caption = 'SnapToGuideLinesCheckBox'
       ParentShowHint = False
       ShowHint = True
@@ -391,26 +407,26 @@ object FormEditorOptionsFrame: TFormEditorOptionsFrame
     AnchorSideBottom.Control = GuideLinesGroupBox
     AnchorSideBottom.Side = asrBottom
     Left = 0
-    Height = 294
+    Height = 232
     Top = 0
-    Width = 282
+    Width = 226
     Anchors = [akTop, akLeft, akBottom]
     Caption = 'DesignerColorsGroupBox'
-    ClientHeight = 269
-    ClientWidth = 278
+    ClientHeight = 212
+    ClientWidth = 222
     TabOrder = 0
     object ColorsListBox: TColorListBox
       AnchorSideLeft.Control = DesignerColorsGroupBox
       AnchorSideTop.Control = DesignerColorsGroupBox
       AnchorSideBottom.Control = ColorBox
-      Left = 8
-      Height = 219
-      Top = 8
-      Width = 262
+      Left = 6
+      Height = 172
+      Top = 6
+      Width = 210
       Style = [cbCustomColors]
       OnGetColors = ColorsListBoxGetColors
       Anchors = [akTop, akLeft, akBottom]
-      BorderSpacing.Around = 8
+      BorderSpacing.Around = 6
       ItemHeight = 0
       OnSelectionChange = ColorsListBoxSelectionChange
       TabOrder = 0
@@ -423,16 +439,16 @@ object FormEditorOptionsFrame: TFormEditorOptionsFrame
       AnchorSideRight.Side = asrBottom
       AnchorSideBottom.Control = DesignerColorsGroupBox
       AnchorSideBottom.Side = asrBottom
-      Left = 8
-      Height = 26
-      Top = 235
-      Width = 262
+      Left = 6
+      Height = 22
+      Top = 184
+      Width = 210
       Style = [cbStandardColors, cbExtendedColors, cbSystemColors, cbCustomColor, cbPrettyNames]
       Anchors = [akLeft, akBottom]
-      BorderSpacing.Around = 8
-      ItemHeight = 20
-      OnChange = ColorBoxChange
+      BorderSpacing.Around = 6
+      ItemHeight = 16
       TabOrder = 1
+      OnChange = ColorBoxChange
     end
   end
 end
