--- a/components/customdrawn/examples/controls/mainform.lfm
+++ b/components/customdrawn/examples/controls/mainform.lfm
@@ -1,15 +1,15 @@
-object formCDControlsTest: TformCDControlsTest
-  Left = 154
+object FormCDControlsTest: TFormCDControlsTest
+  Left = 143
   Height = 240
-  Top = 259
+  Top = 316
   Width = 320
-  Caption = 'formCDControlsTest'
+  Caption = 'TCDToolbar'
   ClientHeight = 240
   ClientWidth = 320
   LCLVersion = '4.99.0.0'
   OnCreate = FormCreate
   object Button1: TButton
-    Left = 24
+    Left = 21
     Height = 25
     Top = 72
     Width = 75
@@ -22,6 +22,7 @@ object formCDControlsTest: TformCDControlsTest
     Height = 23
     Top = 16
     Width = 100
+    DropDownCount = 32
     ItemHeight = 15
     TabOrder = 1
     Text = 'comboDrawer'
@@ -33,5 +34,14 @@ object formCDControlsTest: TformCDControlsTest
     Width = 40
     Caption = 'Drawer:'
     ParentColor = False
+  end
+  object Button2: TButton
+    Left = 107
+    Height = 25
+    Top = 72
+    Width = 75
+    Caption = 'Buttons'
+    TabOrder = 2
+    OnClick = Button2Click
   end
 end
