--- a/components/customdrawn/examples/controls/toolbartest.lfm
+++ b/components/customdrawn/examples/controls/toolbartest.lfm
@@ -2,18 +2,18 @@ object FormToolBar: TFormToolBar
   Left = 349
   Height = 240
   Top = 302
-  Width = 320
+  Width = 392
   Caption = 'FormToolBar'
   ClientHeight = 240
-  ClientWidth = 320
+  ClientWidth = 392
+  LCLVersion = '4.99.0.0'
   OnCreate = FormCreate
   OnShow = FormShow
-  LCLVersion = '1.5'
   object ToolBar1: TToolBar
     Left = 0
     Height = 26
     Top = 214
-    Width = 320
+    Width = 392
     Align = alBottom
     Caption = 'ToolBar1'
     Images = ImageList1
@@ -35,7 +35,6 @@ object FormToolBar: TFormToolBar
       Left = 24
       Height = 22
       Top = 2
-      Width = 8
       Caption = 'ToolButton3'
       Style = tbsSeparator
     end
@@ -43,7 +42,6 @@ object FormToolBar: TFormToolBar
       Left = 55
       Height = 22
       Top = 2
-      Width = 5
       Caption = 'ToolButton4'
       Style = tbsDivider
     end
@@ -56,114 +54,87 @@ object FormToolBar: TFormToolBar
     end
   end
   object Label1: TLabel
-    Left = 13
+    Left = 0
     Height = 15
-    Top = 147
-    Width = 128
+    Top = 199
+    Width = 392
+    Align = alBottom
+    Anchors = [akLeft, akBottom]
     Caption = 'Native for comparison:'
     ParentColor = False
   end
+  object cbFlat: TCheckBox
+    Left = 40
+    Height = 19
+    Top = 64
+    Width = 37
+    Caption = 'Flat'
+    Checked = True
+    State = cbChecked
+    TabOrder = 1
+    OnChange = cbFlatChange
+  end
+  object cbShowCaptions: TCheckBox
+    Left = 40
+    Height = 19
+    Top = 88
+    Width = 95
+    Caption = 'Show captions'
+    TabOrder = 2
+    OnChange = cbShowCaptionsChange
+  end
+  object cbEnabled: TCheckBox
+    Left = 40
+    Height = 19
+    Top = 112
+    Width = 60
+    Caption = 'Enabled'
+    Checked = True
+    State = cbChecked
+    TabOrder = 3
+    OnChange = cbEnabledChange
+  end
+  object cbActivateOnClick: TCheckBox
+    Left = 40
+    Height = 19
+    Top = 139
+    Width = 149
+    Caption = 'Activate OnClick handler'
+    Checked = True
+    State = cbChecked
+    TabOrder = 4
+    OnChange = cbActivateOnClickChange
+  end
   object ImageList1: TImageList
-    left = 200
-    top = 133
+    Left = 312
+    Top = 64
     Bitmap = {
-      4C69030000001000000010000000FEFEFE00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00D9DDE0FFA99987FF92755BFF95795DFF9479
-      5CFF94795CFF94795CFF94795CFF94795CFF94795CFF94795CFF94795CFF9176
-      5AFF90765AFF91765AFF91765AFFA2866EFFC09A77FFCFAE8AFFCFA882FFD0AA
-      83FFD0AA83FFD0AA83FFD0AA83FFD0AA83FFD0AA83FFD0AA83FFD0AA83FFD0AA
-      83FFD0AA83FFD0AA83FFD0AA83FFA77546FFFDE6D7FFFFF7EEFFFFF4EBFFFFF5
-      ECFFFFF5ECFFFFF5ECFFFFF5ECFFFFF5ECFFFFF2E9FFFFF2E9FFFFF4EBFFFFF5
-      ECFFFFF3EAFFFFF5ECFFFFF5ECFFA66F3DFFF9EEE6FFFBFFFFFF866B59FF865D
-      46FF845B42FF856149FF825D45FF805940FF7C543AFF7B5A45FFFFFFFFFFFAFC
-      FEFFFFFFFFFFFBFDFFFFFBFEFFFFA46D3BFFF9EBE0FFFDFDFCFF8B644DFFB5AA
-      95FFB4AF9AFFAC7D5EFFAA7C5CFFA47554FFA4704CFF855C41FFFDF9F6FFFFFF
-      FFFF5F5C5BFF5F5C5BFFFFFFFCFFA36A36FFF8E8DEFFFDF8FAFF926854FFCBD5
-      CBFFCDE2DAFFB89078FFB8927AFFB48E74FF9C7C66FF8D6852FFFCF4F3FF5F5C
-      5BFFFCF4F3FFFCF4F3FF5F5C5BFFA26733FFF8E7DCFFFCF5F6FF9A7C6CFFCABE
-      AFFFC8C1B2FFCFAF9CFFCEAF9CFF9F8A7DFF746A63FF907462FFF6EBEAFF5F5C
-      5BFFF6EBEAFFF6EBEAFF5F5C5BFFA16531FFF6E5DAFFF4EEEEFF8A7365FFB69E
-      92FFB69E90FFB09A8DFFA48F82FF66605CFF716761FF846D5FFFEEE4E2FF5F5C
-      5BFFEEE4E2FFEEE4E2FF5F5C5BFFA1642FFFF6E3D8FFF0E8E9FF654838FF6A4B
-      39FF654634FF5D3B27FF5A3926FF52392CFF4E3628FF583928FFE9DDDBFF5F5C
-      5BFFE9DDDBFFE9DDDBFF5F5C5BFFA0612BFFF5E1D5FFEAE1E3FF70503EFF8761
-      4FFF85604DFF86614EFF87624EFF835E4BFF7B5E4FFF9F948FFFE6D9D9FFE6D9
-      D9FF5F5C5BFF5F5C5BFFE6DAD9FF9E5E28FFF3DED2FFE9DEE0FF7C655AFF7055
-      44FF705545FF705444FF705444FF6F5243FF846E63FFB2B4B3FFE6D6D5FFE9D9
-      D9FFEADAD9FFE8D8D8FFE6D6D5FFA06027FFF6E2D6FFE1D7DAFFDECECDFFDFD0
-      D0FFDFD0D0FFDFD0D0FFDFD0D0FFDECFCFFFDFD1D0FFE0D1D1FFDECFCFFFDFD0
-      D0FFDECFCFFFDFD0D0FFDECFCFFFFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00BFBDBDFF927777FF927777FF927777FF9277
-      77FF927777FF927777FF927777FF927777FF927777FF927777FF927777FF9277
-      77FF927777FF927777FF927777FF927777FFF4DDCEFFF4DDCEFFF4DDCEFFF4DD
-      CEFFF4DDCEFFF4DDCEFFF4DDCEFFF4DDCEFFF4DDCEFFF4DDCEFFF4DDCEFFF4DD
-      CEFFF4DDCEFFF4DDCEFFA4A4FFFF927777FFE8B697FFE8B697FFE8B697FFE8B6
-      97FFE8B697FFE8B697FFE8B697FFE8B697FFE8B697FFE8B697FFE8B697FFE8B6
-      97FFE8B697FFA4A4FFFF400080FF927777FFDD966AFFDD966AFFDD966AFFDD96
-      6AFFDD966AFFDD966AFFDD966AFFDD966AFFDD966AFFDD966AFFDD966AFFDD96
-      6AFFDD966AFFDD966AFFA4A4FFFF927777FF927777FF927777FF927777FF9277
-      77FF927777FF927777FF927777FF927777FF927777FF927777FF927777FF9277
-      77FF927777FF927777FF927777FF927777FFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
-      FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
-      FFFFFFFFFFFFFFFFFFFFFFFFFFFF927777FFFFFFFFFFDBDFDFFF927777FF9277
-      77FF927777FF927777FF927777FF927777FF927777FF927777FF927777FF9277
-      77FF927777FF927777FF927777FF927777FFFFFFFFFFDBDFDFFF927777FFFFFF
-      FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
-      FFFFFFFFFFFFFFFFFFFFFFFFFFFF927777FFFFFFFFFFDBDFDFFF927777FFFFFF
-      FFFFDBDFDFFF927777FF927777FF927777FF927777FF927777FF927777FF9277
-      77FF927777FF927777FF927777FF927777FFFFFFFFFFDBDFDFFF927777FFFFFF
-      FFFFDBDFDFFFDBDFDFFFDBDFDFFFDBDFDFFFDBDFDFFFDBDFDFFFDBDFDFFFDBDF
-      DFFFDBDFDFFFDBDFDFFFDBDFDFFF927777FFFFFFFFFFDBDFDFFF927777FFFFFF
-      FFFFDBDFDFFFDBDFDFFFBE6C38FFBE6C38FFDBDFDFFFDBDFDFFFDBDFDFFFBE6C
-      38FFBE6C38FFBE6C38FFBE6C38FF927777FFFFFFFFFFDBDFDFFF927777FFFFFF
-      FFFFDBDFDFFFBE6C38FFBE6C38FFBE6C38FFDBDFDFFFDBDFDFFFDBDFDFFFBE6C
-      38FFDDAC8CFFDBDFDFFFDBDFDFFF927777FFFFFFFFFFDBDFDFFF927777FFFFFF
-      FFFFDBDFDFFFDBDFDFFFDDAC8CFFBE6C38FFDBDFDFFFDBDFDFFFDBDFDFFFBE6C
-      38FFBE6C38FFBE6C38FFDBDFDFFF927777FFFFFFFFFFDBDFDFFF927777FFFFFF
-      FFFFDBDFDFFFDBDFDFFFDDAC8CFFBE6C38FFDBDFDFFFDBDFDFFFDBDFDFFFDBDF
-      DFFFDBDFDFFFDDAC8CFFBE6C38FF927777FFFFFFFFFFDBDFDFFF927777FFFFFF
-      FFFFDBDFDFFFDBDFDFFFDDAC8CFFBE6C38FFDBDFDFFFDBDFDFFFDBDFDFFFDDAC
-      8CFFDBDFDFFFDDAC8CFFBE6C38FFFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00927777FF927777FF927777FF927777FF9277
-      77FF927777FF927777FF927777FF927777FF927777FF927777FF927777FF9277
-      77FF927777FF927777FF927777FF927777FFF5F7F7FFF5F7F7FFF5F7F7FFF5F7
-      F7FFF5F7F7FFF5F7F7FFF5F7F7FFF5F7F7FFF5F7F7FFF5F7F7FFF5F7F7FFF5F7
-      F7FFF5F7F7FFF5F7F7FFF5F7F7FF927777FFF5F7F7FF00F0FFFF0000FFFFF5F7
-      F7FF333131FFF5F7F7FF7A7A7AFFF5F7F7FFF5F7F7FFC3C1C0FFF5F7F7FF7A7A
-      7AFFF5F7F7FFF5F7F7FFF5F7F7FF927777FF00F0FFFF0000FFFF43AEEBFFF5F7
-      F7FF010303FF333131FF010303FF333131FF010303FF7A7878FF333131FF0103
-      03FF333131FF010303FF7A7878FF927777FF43AEEBFF00F0FFFFF5F7F7FFF5F7
-      F7FFF5F7F7FFF5F7F7FFF5F7F7FFF5F7F7FFF5F7F7FFF5F7F7FFF5F7F7FFF5F7
-      F7FFF5F7F7FFF5F7F7FFF5F7F7FF927777FF7A7A7AFF7A7A7AFF7A7A7AFF7A7A
-      7AFF7A7A7AFF7A7A7AFF7A7A7AFF7A7A7AFF7A7A7AFF7A7A7AFF7A7A7AFF7A7A
-      7AFF7A7A7AFF7A7A7AFF7A7A7AFF927777FFC3C1C0FFC3C1C0FFC3C1C0FFC3C1
-      C0FFC3C1C0FFC3C1C0FFC3C1C0FFC3C1C0FFC3C1C0FFC3C1C0FFC3C1C0FFC3C1
-      C0FFC3C1C0FFC3C1C0FFC3C1C0FF927777FFF5F7F7FFC81EE6FFCFDC00FFF5F7
-      F7FF7A7A7AFFF5F7F7FF7A7A7AFFF5F7F7FFF5F7F7FFF5F7F7FFF5F7F7FFC3C1
-      C0FFF5F7F7FFF5F7F7FFF5F7F7FF927777FFCFDC00FFDC4300FFDC4300FFF5F7
-      F7FF010303FF333131FF010303FF333131FF7A7878FF010303FF333131FF3331
-      31FF010303FF333131FF7A7878FF927777FFC81EE6FFC81EE6FFF5F7F7FFF5F7
-      F7FFF5F7F7FFF5F7F7FFF5F7F7FFF5F7F7FFF5F7F7FFF5F7F7FFF5F7F7FFF5F7
-      F7FFF5F7F7FFF5F7F7FFF5F7F7FF927777FF989799FF00F0FFFF0000FFFF9897
-      99FF333131FF989799FF989799FF989799FF989799FF989799FF989799FF9897
-      99FF989799FF989799FF989799FF927777FF00F0FFFF0000FFFF43AEEBFF9897
-      99FF010303FF333131FF010303FF333131FF333131FF010303FF333131FF7A78
-      78FF010303FF333131FF010303FF927777FF43AEEBFF00F0FFFF989799FF9897
-      99FF989799FF989799FF989799FF989799FF989799FF989799FF989799FF9897
-      99FF989799FF989799FF989799FF927777FFF5F7F7FFF5F7F7FFF5F7F7FFD842
-      00FFA5E61AFFF5F7F7FF010303FFF5F7F7FF7A7A7AFFF5F7F7FFF5F7F7FFF5F7
-      F7FFF5F7F7FFC3C1C0FFF5F7F7FF
+      4C7A030000001000000010000000250300000000000078DAE595EB4B93511CC7
+      17FE17BDE8650A052186685298370A53430C523775EA54CC5BA4A973827805CB
+      9C433345BCB56E221A66E21B4DE98D24BA1978779B975A9BC690D479DBF6ED39
+      8F9E31E7257D16F4A2073EFC7E3BE77C9EDF39BFC3C32C160B0FC07FCBB46A1E
+      EFEACA20CB8A444DAE00D5B9FC13A97A1C012943D53EADA56918A8CF86A2A31C
+      8AB78550B6159D89375901306B27814D03B0BE026CFC3CCC2FFD1E747E6DD93A
+      F73AFD3AB60D5AEC3287297D108E5241008A237D5022BC8D42813F0AC2BD2109
+      BB86BC087F9067C76461E3AE998149E5A95ED85E9987D96CC293F8207C6CAB41
+      77673DDAF3A3D026E1439E150679C61D94F06FC2BC6D64DD687E240B60C2CB64
+      776CE9D4306FED40961486E1F1618C2CCEA0579A835E9918DDCF32D120494045
+      52284CEB6BAC4722CD5B13DDB0F5630EA60D23EA2529F8D2DF89A1C12E283A1B
+      30CAD0549E8FCCE438483363615C59661D1269DE227285F1FB0CD60D06943F12
+      A1A751C620C5FBFA0AC82B0B9110C3C7C344218A53A361F8B6C83A24D2BC25FE
+      0A8C4B5358D5E921BAE581E4404F8802AE42E0E58C08CF8B08F5BC8C607717DC
+      F774815E35CB3A24D2BC5978091B0BE3585E5842C6DD1B281386A0242608A5C2
+      6094C506A3282A1079512168AAAE84767A9A85F64F3B338DC62817ACA9BF42AF
+      9E874414818C7B7E0CFEC808F363490FF545715A1CBABA3F403B310E3DE32F33
+      9E6E6A8AFDDD1CE30CE3E204162667A01E1D8146A93C805AA180664C89F9B1B1
+      BD9C8EED4747BF9F4F7D7D9065673BC4BA6A94137239585FD7537B6688EBCD2B
+      607DD5F3644ED0FA8EE2C843FD598DC6A1FAD477B43E97BD1CE59F9693FCFE14
+      0F16DBF5748C729C6FBBC6DE57B53F3D557DB2EEA4FA5C7CFBB9B3FA74EF74EE
+      5FFFFFFE8DEF6763739333D4E7AD329B61764472375757368AC562EBBACF8303
+      87C6A84F5DDF8E1576EC9C9313FB0EDB28CEC939728CF8C423EFE0BA7FB227AE
+      109F9C8D2BB47F4317B450CCF10EF4C8BE57B67DB4DD3FF1E67CF738AA7FA44F
+      34B71F273EA94DE0DABF17B575D63B2439793789A7C1FEFEC998FDFE8F3B0B89
+      B6F77FDA9AF6F56DCF33E5C3C32BED796B1FFF740FBF01D497F6DD
     }
   end
 end
