--- a/components/customdrawn/examples/controls/mainform.lfm
+++ b/components/customdrawn/examples/controls/mainform.lfm
@@ -1,15 +1,15 @@
-object FormCDControlsTest: TFormCDControlsTest
-  Left = 143
+object formCDControlsTest: TformCDControlsTest
+  Left = 154
   Height = 240
-  Top = 316
+  Top = 259
   Width = 320
-  Caption = 'TCDToolbar'
+  Caption = 'formCDControlsTest'
   ClientHeight = 240
   ClientWidth = 320
   LCLVersion = '4.99.0.0'
   OnCreate = FormCreate
   object Button1: TButton
-    Left = 21
+    Left = 24
     Height = 25
     Top = 72
     Width = 75
@@ -22,7 +22,6 @@ object FormCDControlsTest: TFormCDControlsTest
     Height = 23
     Top = 16
     Width = 100
-    DropDownCount = 32
     ItemHeight = 15
     TabOrder = 1
     Text = 'comboDrawer'
@@ -34,14 +33,5 @@ object FormCDControlsTest: TFormCDControlsTest
     Width = 40
     Caption = 'Drawer:'
     ParentColor = False
-  end
-  object Button2: TButton
-    Left = 107
-    Height = 25
-    Top = 72
-    Width = 75
-    Caption = 'Buttons'
-    TabOrder = 2
-    OnClick = Button2Click
   end
 end
