--- a/components/todolist/todolist.lfm
+++ b/components/todolist/todolist.lfm
@@ -2,23 +2,23 @@ object IDETodoWindow: TIDETodoWindow
   Left = 379
   Height = 230
   Top = 239
-  Width = 820
+  Width = 1014
   ActiveControl = lvTodo
   Caption = 'IDETodoWindow'
   ClientHeight = 230
-  ClientWidth = 820
+  ClientWidth = 1014
   KeyPreview = True
   SessionProperties = 'cboShowWhat.ItemIndex;chkListed.Checked;chkPackages.Checked;chkSourceEditor.Checked;chkUsed.Checked;lvTodo.Columns'
   LCLVersion = '4.99.0.0'
   OnCloseQuery = FormCloseQuery
   OnCreate = FormCreate
   OnKeyDown = FormKeyDown
-  OnShow = acRefreshExecute
+  OnShow = ShowChange
   object lvTodo: TListView
     Left = 6
     Height = 176
     Top = 48
-    Width = 808
+    Width = 1002
     Align = alClient
     AutoSortIndicator = True
     BorderSpacing.Left = 6
@@ -59,10 +59,11 @@ object IDETodoWindow: TIDETodoWindow
         Caption = 'Category'
         Width = 100
       end>
-    PopupMenu = mnuPopup
+    PopupMenu = mnuList
     ReadOnly = True
     RowSelect = True
     ScrollBars = ssAutoBoth
+    SortColumn = 6
     SortType = stData
     TabOrder = 1
     ViewStyle = vsReport
@@ -76,7 +77,7 @@ object IDETodoWindow: TIDETodoWindow
     Left = 0
     Height = 48
     Top = 0
-    Width = 820
+    Width = 1014
     AutoSize = True
     ButtonHeight = 46
     ButtonWidth = 47
@@ -123,165 +124,69 @@ object IDETodoWindow: TIDETodoWindow
       Caption = 'N2'
       Style = tbsDivider
     end
-    object pnlShowWhat: TPanel
-      Left = 208
-      Height = 46
-      Top = 2
-      Width = 115
-      BevelOuter = bvNone
-      ClientHeight = 46
-      ClientWidth = 115
-      TabOrder = 0
-      object lblShowWhat: TLabel
-        Left = 4
-        Height = 18
-        Top = 0
-        Width = 107
-        Align = alTop
-        BorderSpacing.Left = 4
-        BorderSpacing.Right = 4
-        Caption = 'Show'
-        ParentColor = False
-      end
-      object cboShowWhat: TComboBox
-        AnchorSideBottom.Control = pnlShowWhat
-        Left = 6
-        Height = 24
-        Top = 20
-        Width = 103
-        Align = alClient
-        BorderSpacing.Left = 4
-        BorderSpacing.Right = 4
-        BorderSpacing.Around = 2
-        ItemHeight = 24
-        ItemIndex = 0
-        Items.Strings = (
-          'All'
-          'ToDo Only'
-          'Done Only'
-          'Notes Only'
-          'ToDo and Done'
-          'ToDo and Notes'
-          'Done and Notes'
-        )
-        TabOrder = 0
-        Text = 'All'
-        OnChange = acRefreshExecute
-      end
-    end
     object N3: TToolButton
-      Left = 323
+      Left = 305
       Height = 46
       Top = 2
       Caption = 'N3'
       Style = tbsDivider
     end
-    object pnlOptions: TPanel
-      Left = 328
-      Height = 42
-      Top = 2
-      Width = 281
-      AutoSize = True
-      BevelOuter = bvNone
-      ClientHeight = 42
-      ClientWidth = 281
-      TabOrder = 1
-      object lblOptions: TLabel
-        AnchorSideLeft.Control = pnlOptions
-        AnchorSideTop.Control = pnlOptions
-        Left = 4
-        Height = 18
-        Top = 0
-        Width = 49
-        BorderSpacing.Left = 4
-        BorderSpacing.Bottom = 2
-        Caption = 'Options'
-      end
-      object chkListed: TCheckBox
-        AnchorSideLeft.Control = pnlOptions
-        AnchorSideTop.Control = lblOptions
-        AnchorSideTop.Side = asrBottom
-        AnchorSideBottom.Side = asrBottom
-        Left = 4
-        Height = 22
-        Top = 20
-        Width = 61
-        BorderSpacing.Left = 4
-        BorderSpacing.Right = 4
-        Caption = '&Listed'
-        Checked = True
-        State = cbChecked
-        TabOrder = 0
-        OnChange = acRefreshExecute
-      end
-      object chkUsed: TCheckBox
-        AnchorSideLeft.Control = chkListed
-        AnchorSideLeft.Side = asrBottom
-        AnchorSideTop.Control = chkListed
-        Left = 69
-        Height = 22
-        Top = 20
-        Width = 56
-        BorderSpacing.Left = 4
-        BorderSpacing.Right = 4
-        Caption = '&Used'
-        Checked = True
-        State = cbChecked
-        TabOrder = 1
-        OnChange = acRefreshExecute
-      end
-      object chkSourceEditor: TCheckBox
-        AnchorSideLeft.Control = chkUsed
-        AnchorSideLeft.Side = asrBottom
-        AnchorSideTop.Control = chkListed
-        Left = 129
-        Height = 22
-        Top = 20
-        Width = 62
-        BorderSpacing.Right = 4
-        Caption = 'Editor'
-        Checked = True
-        State = cbChecked
-        TabOrder = 2
-        OnChange = acRefreshExecute
-      end
-      object chkPackages: TCheckBox
-        AnchorSideLeft.Control = chkSourceEditor
-        AnchorSideLeft.Side = asrBottom
-        AnchorSideTop.Control = chkListed
-        Left = 195
-        Height = 22
-        Top = 20
-        Width = 82
-        BorderSpacing.Right = 4
-        Caption = '&Packages'
-        TabOrder = 3
-        OnChange = acRefreshExecute
-      end
-    end
     object N4: TToolButton
-      Left = 609
+      Left = 399
       Height = 46
       Top = 2
       Caption = 'N4'
       Style = tbsDivider
     end
     object tbHelp: TToolButton
-      Left = 666
+      Left = 456
       Top = 2
       Action = acHelp
     end
     object N5: TToolButton
-      Left = 661
+      Left = 451
       Height = 46
       Top = 2
       Caption = 'N5'
       Style = tbsDivider
     end
     object tbColors: TToolButton
-      Left = 614
+      Left = 404
       Top = 2
       Action = acColors
+    end
+    object tbShowTypes: TToolButton
+      Left = 208
+      Top = 2
+      Caption = 'Show Types'
+      DropdownMenu = mnuTypes
+      Style = tbsButtonDrop
+    end
+    object tbShowFiles: TToolButton
+      Left = 310
+      Top = 2
+      Caption = 'Show Files'
+      DropdownMenu = mnuFiles
+      Style = tbsButtonDrop
+    end
+    object pnlStatistics: TPanel
+      Left = 503
+      Height = 46
+      Top = 2
+      Width = 225
+      BevelOuter = bvNone
+      ClientHeight = 46
+      ClientWidth = 225
+      TabOrder = 0
+      object lblCount: TLabel
+        AnchorSideTop.Control = pnlStatistics
+        AnchorSideTop.Side = asrCenter
+        AnchorSideBottom.Side = asrBottom
+        Left = 40
+        Height = 1
+        Top = 23
+        Width = 1
+      end
     end
   end
   object ActionList: TActionList
@@ -302,7 +207,7 @@ object IDETodoWindow: TIDETodoWindow
     object acRefresh: TAction
       Caption = 'Refresh'
       ShortCut = 116
-      OnExecute = acRefreshExecute
+      OnExecute = ShowChange
     end
     object acExport: TAction
       Caption = 'Export'
@@ -333,11 +238,74 @@ object IDETodoWindow: TIDETodoWindow
     Left = 416
     Top = 152
   end
-  object mnuPopup: TPopupMenu
-    Left = 324
-    Top = 133
+  object mnuList: TPopupMenu
+    Left = 40
+    Top = 120
     object EditMenuItem: TMenuItem
       Action = acEdit
+    end
+  end
+  object mnuTypes: TPopupMenu
+    Left = 128
+    Top = 120
+    object ToDoMenuItem: TMenuItem
+      Caption = 'ToDo'
+      Checked = True
+      ShowAlwaysCheckable = True
+      OnClick = ShowSomethingMenuItemClick
+    end
+    object FixmeMenuItem: TMenuItem
+      Caption = 'FixMe'
+      Checked = True
+      ShowAlwaysCheckable = True
+      OnClick = ShowSomethingMenuItemClick
+    end
+    object DoneMenuItem: TMenuItem
+      Caption = 'Done'
+      Checked = True
+      ShowAlwaysCheckable = True
+      OnClick = ShowSomethingMenuItemClick
+    end
+    object NoteMenuItem: TMenuItem
+      Caption = 'Note'
+      Checked = True
+      ShowAlwaysCheckable = True
+      OnClick = ShowSomethingMenuItemClick
+    end
+  end
+  object mnuFiles: TPopupMenu
+    Left = 216
+    Top = 120
+    object ListedFilesMenuItem: TMenuItem
+      Caption = 'Listed files'
+      Checked = True
+      ShowAlwaysCheckable = True
+      OnClick = ShowSomethingMenuItemClick
+    end
+    object UsedUnitsMenuItem: TMenuItem
+      Caption = 'Used Units'
+      Checked = True
+      ShowAlwaysCheckable = True
+      OnClick = ShowSomethingMenuItemClick
+    end
+    object EditorFilesMenuItem: TMenuItem
+      Caption = 'Editor Files'
+      Checked = True
+      ShowAlwaysCheckable = True
+      OnClick = ShowSomethingMenuItemClick
+    end
+    object DepPackagesMenuItem: TMenuItem
+      Caption = 'Dependent Packages'
+      Checked = True
+      ShowAlwaysCheckable = True
+      OnClick = ShowSomethingMenuItemClick
+    end
+    object AllPackagesMenuItem: TMenuItem
+      Caption = 'All Packages'
+      Checked = True
+      ShowAlwaysCheckable = True
+      Visible = False
+      OnClick = ShowSomethingMenuItemClick
     end
   end
 end
